--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 
 /* Home section CSS */
 .hero-section {
-    background-image: url(../web-img-3.jpg);
+    background-image: url(web-img-3.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
